--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@langchain/anthropic": "^0.3.24",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.62",
+    "algoliasearch": "^5.33.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ioredis": "^5.6.1",
     "js-yaml": "^4.1.0",
     "jsonrepair": "^3.12.0",
     "langchain": "^0.3.29",
