--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build": "npm ci --only=production",
-    "setup-memory": "node scripts/create-memory-table.js"
+    "setup-memory": "node scripts/create-memory-table.js",
+    "check-namespaces": "node scripts/check-namespaces.js"
   },
   "keywords": [],
   "author": "",
