updates bu monty

--- a/swagger/unified-api.yaml
+++ b/swagger/unified-api.yaml
@@ -3,7 +3,8 @@ info:
   title: Unified API
   version: 1.0.0
   description: Unified API for handling schemas, namespaces, and API execution
-
+servers:
+  - url: /unified
 
 paths:
   # Schema Operations
