--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.62",
     "algoliasearch": "^5.33.0",
+    "amazon-cognito-identity-js": "^6.3.15",
+    "aws-amplify": "^6.15.4",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
