--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.56.0",
     "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/client-iam": "^3.855.0",
+    "@aws-sdk/client-lambda": "^3.855.0",
     "@aws-sdk/client-sns": "^3.772.0",
     "@aws-sdk/client-sqs": "^3.540.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
@@ -25,6 +27,7 @@
     "@langchain/core": "^0.3.62",
     "algoliasearch": "^5.33.0",
     "amazon-cognito-identity-js": "^6.3.15",
+    "archiver": "^7.0.1",
     "aws-amplify": "^6.15.4",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
