--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@aws-sdk/client-lambda": "^3.855.0",
     "@aws-sdk/client-sns": "^3.772.0",
     "@aws-sdk/client-sqs": "^3.540.0",
+    "@aws-sdk/client-sts": "^3.857.0",
     "@aws-sdk/lib-dynamodb": "^3.540.0",
     "@langchain/anthropic": "^0.3.24",
     "@langchain/community": "^0.3.47",
