--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ioredis": "^5.6.1",
     "js-yaml": "^4.1.0",
     "jsonrepair": "^3.12.0",
+    "jwks-rsa": "^3.2.0",
     "langchain": "^0.3.29",
     "nanoid": "^5.1.5",
     "openapi-backend": "^5.11.1",
