--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "archiver": "^7.0.1",
     "aws-amplify": "^6.15.4",
     "axios": "^1.6.7",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -43,6 +44,7 @@
     "langchain": "^0.3.29",
     "nanoid": "^5.1.5",
     "openapi-backend": "^5.11.1",
+    "puppeteer": "^22.15.0",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
     "ws": "^8.18.1"
