--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.6.7",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ioredis": "^5.6.1",
