--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "langchain": "^0.3.29",
     "multer": "^2.0.2",
     "nanoid": "^5.1.5",
+    "node-fetch": "^3.3.2",
     "openapi-backend": "^5.11.1",
     "puppeteer": "^22.15.0",
     "swagger-ui-express": "^5.0.1",
