--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-iam": "^3.855.0",
     "@aws-sdk/client-lambda": "^3.855.0",
     "@aws-sdk/client-s3": "^3.873.0",
+    "@aws-sdk/client-sfn": "^3.928.0",
     "@aws-sdk/client-sns": "^3.772.0",
     "@aws-sdk/client-sqs": "^3.540.0",
     "@aws-sdk/client-sts": "^3.857.0",
