--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-api-gateway": "^3.901.0",
     "@aws-sdk/client-apigatewayv2": "^3.873.0",
     "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/client-eventbridge": "^3.929.0",
     "@aws-sdk/client-iam": "^3.855.0",
     "@aws-sdk/client-lambda": "^3.855.0",
     "@aws-sdk/client-s3": "^3.873.0",
